# animation

./: README.md  export_tiktok.py  export_tiktok_final.py  export_tiktok_with_audio.py  main.py  pyproject.toml
src/: __init__.py  animation.py  audio.py  character.py  config.py
