[project]
name = "character-animation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=2.1.1",
    "numpy>=2.3.4",
    "opencv-python>=4.10.0",
    "openai>=2.7.1",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
]
